aprendendendo urna-eletronica.js

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src=""></script>
-    <button type="button" onclick="" urnaEletronica()"></button>
+    <script src="estruturas.js"></script>
+    <button type="button" onclick="">começar</button>
+    <button type="button" onclick="barulhinho()"> brincar</button>
+    <button type="button" onclick="escreveNoAlert()">inspecionar</button>
 </head>
 <body>
     
